# iTemplateManager

./: .gitignore  CMakeLists.txt  LICENSE  aboutwindow.cpp  aboutwindow.h  aboutwindow.ui  dataholder.cpp  dataholder.h  defs.h  directorytreenode.cpp  directorytreenode.h  iTemplateManager.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
3rd/libarchive/include/: README
3rd/libarchive/lib/: README
